CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_BUILD_TYPE Debug)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu11")

PROJECT(dobble)

INCLUDE(FindPkgConfig)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image)
PKG_SEARCH_MODULE(SDL2TTF REQUIRED SDL2_ttf)

SET(header include/GestionGraphique.h)
SET(sources src/GestionGraphique.c src/Dobble.c)

ADD_EXECUTABLE(${PROJECT_NAME} ${header} ${sources})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}
  PRIVATE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  PRIVATE ${SDL2_INCLUDE_DIRS}
  PRIVATE ${SDL2IMAGE_INCLUDE_DIRS}
  PRIVATE ${SDL2TTF_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} m
  ${SDL2_LIBRARIES}
  ${SDL2IMAGE_LIBRARIES}
  ${SDL2TTF_LIBRARIES})
